--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: clojure
 lein: lein2
 script: lein2 do all deps, all test
+branches:
+  only:
+    - master
 jdk:
   - openjdk6
   - openjdk7
